--- a/app/src/main/res/layout/fragment_detailed.xml
+++ b/app/src/main/res/layout/fragment_detailed.xml
@@ -11,7 +11,7 @@
     <ImageView
         android:id="@+id/imgThumb"
         android:layout_width="match_parent"
-        android:layout_height="200dp"
+        android:layout_height="250dp"
         android:background="@color/white"
         />
 
@@ -22,5 +22,6 @@
         android:textSize="16sp"
         android:textStyle="bold"
         android:textColor="@color/black"
+        android:layout_margin="16dp"
         />
 </LinearLayout>
