--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -3,16 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/nav_graph"
-    app:startDestination="@id/convertFragment">
+    app:startDestination="@id/albumListFragment">
 
-    <fragment
-        android:id="@+id/convertFragment"
-        android:name="com.example.dynaimage.views.TextConvertFragment"
-        tools:layout="@layout/fragment_text_convert" >
-        <action
-            android:id="@+id/action_convertFragment_to_albumListFragment"
-            app:destination="@id/albumListFragment" />
-    </fragment>
     <fragment
         android:id="@+id/albumListFragment"
         android:name="com.example.dynaimage.views.AlbumListFragment"
